# ai-content-studio

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  railway.json
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  scratch_check_db.py  scratch_test_gemini.py
backend/app/: main.py  worker.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ai_preferences.py  assets.py  auth.py  digital_humans.py  health.py  pipeline.py  projects.py  workspaces.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0e66a3d3cb8c_add_brandkit_model.py  2557c7006d83_initial_schema.py  3c7a2a5f52db_add_digitalhuman_models.py  (+3 more)
backend/app/gateway/: __init__.py  base.py  router.py
backend/app/gateway/providers/: anthropic.py  elevenlabs.py  gemini.py  heygen.py  openai.py
backend/app/middleware/: correlation.py  logging.py  rate_limit.py
backend/app/models/: __init__.py  ai_preference.py  audit_log.py  avatar.py  base.py  brand_kit.py  digital_human.py  pipeline_run.py  project.py  refresh_token.py  user.py  workspace.py
backend/app/repositories/: ai_preference.py  base.py  project.py  refresh_token.py  user.py  workspace.py
backend/app/schemas/: ai_preference.py  assets.py  auth.py  brand_kit.py  common.py  dashboard.py  digital_human.py  pipeline.py  project.py  workspace.py
backend/app/services/: ai_preference.py  assets.py  auth.py  dashboard.py  email.py  pipeline.py  project.py  workspace.py
backend/app/workflow/: graph.py  nodes.py  state.py  tasks.py
(+52 files in other folders)
