[project]
name = "ai-content-studio-backend"
version = "0.1.0"
description = "AI Content Studio — Backend API"
requires-python = ">=3.11"
dependencies = [
    # --- Web Framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    # --- Redis ---
    "redis[hiredis]>=5.0.0",
    # --- Auth & Security ---
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "cryptography>=43.0.0",
    # --- Validation & Config ---
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "email-validator>=2.2.0",
    # --- HTTP ---
    "httpx>=0.27.0",
    # --- Logging & Observability ---
    "structlog>=24.4.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    # --- Email ---
    "aiosmtplib>=3.0.0",
    # --- Utilities ---
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    # --- AI Providers ---
    "google-genai>=1.0.0",
    "openai>=1.50.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
